# AiRouter

./: .dockerignore  .env.example  .gitignore  API_V1_Documentation.md  CLAUDE.md  CONCURRENT_HEALTH_CHECK_README.md  Dockerfile  Dockerfile.multi  Git.md  Makefile  README.md  REFACTOR_README.md  RESPONSE_UNIFIED_SUMMARY.md  alembic.ini  docker-compose.yml  pyproject.toml  realtime_test.py  requirements.txt  run.py  start.sh  test_concurrent_health_check.py  test_performance.py  test_refactored_services.py  test_unified_api.py
.cursor/rules/: git.mdc  log.mdc
alembic/: env.py
app/: main.py
app/api/: __init__.py
app/api/admin/: __init__.py  providers.py
app/api/admin/config/: __init__.py  config.py
app/api/admin/health/: health.py
app/api/admin/models/: __init__.py  capability_service.py  model_service.py  models.py
app/api/admin/monitoring/: __init__.py  monitoring.py
app/api/admin/stats/: __init__.py  dto.py  stats.py
app/api/api/: __init__.py  load_balancing.py
app/api/api/database/: __init__.py  capabilities.py  database.py  models.py  providers.py
app/api/api/pool/: __init__.py  pool.py
app/api/v1/: __init__.py  chat.py  database.py  load_balancing.py  models.py  providers.py  stats.py
app/api/v1/anthropic/: __init__.py  messages.py
app/api/v1/chat/: chat.py
app/api/v1/database/: __init__.py  database.py
app/api/v1/health/: health.py
app/api/v1/image/: __init__.py  image.py
app/api/v1/models/: __init__.py  cache_manager.py  capability_service.py  model_service.py  models.py
app/api/v1/pool/: pool.py
app/api/v1/stats/: dto.py  stats.py
app/architecture/: microservice_design.py
app/core/: app.py  config_hot_reload.py  performance.py  routes.py
app/core/adapters/: __init__.py  aliqwen.py  anthropic.py  base.py  openai.py  volcengine.py  zhipu.py
app/middleware/: __init__.py  exception_handlers.py  request_logging.py
app/models/: __init__.py  capability.py  database.py  enums.py  llm_model.py  llm_model_capability.py  llm_model_param.py  llm_model_provider.py  llm_provider.py  llm_provider_apikey.py  pagination.py  query_builder.py  requests.py  response.py  schemas.py  sqlmodel_models.py
app/monitoring/: performance_monitor.py
app/services/: README.md  __init__.py  adapter_compatibility.py  adapter_database_service.py  adapter_factory.py  adapter_health_checker.py  adapter_manager.py  adapter_pool.py  database_service.py  database_service_new.py  health_check_service.py  load_balancing_strategies.py  model_provider_service.py  model_service.py  optimized_adapter_pool.py  optimized_database_service.py  optimized_load_balancing.py  provider_service.py  router.py  service_factory.py  service_manager.py
app/services/adapters/: __init__.py  adapter_factory.py  adapter_health_checker.py  adapter_manager.py  adapter_pool.py
app/services/base/: __init__.py  repository_base.py  transaction_manager.py
app/services/business/: __init__.py  api_key_service.py  model_provider_service.py  model_service.py  provider_service.py
app/services/capability/: __init__.py
app/services/database/: __init__.py  async_database_service.py  database_service.py  database_service_integration.py  sqlmodel_database_service.py  transaction_manager.py
app/services/infrastructure/: __init__.py  service_factory.py  service_manager.py
app/services/load_balancing/: __init__.py  load_balancing_strategies.py  router.py
app/services/model/: __init__.py  model_provider_service.py  model_query_service.py  model_service.py
app/services/monitoring/: __init__.py  enhanced_model_service.py  health_check_service.py
app/services/provider/: __init__.py  provider_service.py
app/services/repositories/: __init__.py  api_key_repository.py  model_provider_repository.py  model_repository.py  provider_repository.py
app/utils/: logging_config.py  pagination.py  query_helper.py  simple_auth.py
config/: optimization_config.py  settings.py
docs/: API_ENDPOINTS.md  ARCHITECTURE.md  OPTIMIZATION_GUIDE.md  SERVICES_STRUCTURE.md  adapter_pool.md  docker-deployment.md
examples/: api_client_example.py
scripts/: check_db.py  docker-build.sh  setup.sh  test_api_keys.py  test_detailed_logging.py  test_env_reading.py  test_load_balancing_config.py  test_model_creation.py  test_refactored_services.py
web/: .env.example  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
web/src/: components.d.ts.d.ts  index.css  main.tsx  virtual-generated-pages-react.d.ts
web/src/components/: LocaleSwitcher.tsx
web/src/contexts/: LocaleContext.tsx  ThemeContext.tsx
web/src/hooks/: useTranslation.ts
web/src/layouts/: AppLayout.tsx
web/src/locales/: index.ts
web/src/pages/: index.tsx
web/src/routes/: index.ts  layout.tsx
web/src/services/: api.ts
web/src/stores/: README.md  capabilitiesStore.ts
(+3 files in other folders)
