[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "ai-router"
version = "0.1.0"
description = "FastAPI application with AI integration"
authors = [
    {name = "MoLing"},
]
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "sqlalchemy==2.0.23",
    "alembic==1.13.1",
    "psycopg2-binary==2.9.9",
    "openai==1.3.7",
    "anthropic==0.7.7",
    "httpx==0.25.2",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "python-multipart==0.0.6",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "prometheus-client==0.19.0",
    "loguru>=0.7.3",
]
requires-python = ">=3.8.1"  # 调整为 3.8.1 及以上
[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "black==23.11.0",
    "isort==5.12.0",
    "flake8==6.1.0",
]
[project.urls]
Homepage = "https://github.com/yourusername/yourproject"
Repository = "https://github.com/yourusername/yourproject.git"
Documentation = "https://yourproject.readthedocs.io/"
[tool.black]
line-length = 88
target-version = ["py38"]
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
[tool.setuptools]
packages = ["app", "logs", "config"]
